20-gateway-api-ngf/referencegrant.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: my-referencegrant
  namespace: nginx-gateway
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: nginx-gateway
  to:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: nginx-httproute
